added extra ranking with users

--- a/views/user.html.twig
+++ b/views/user.html.twig
@@ -1,1 +1,15 @@
-{# empty Twig template #}
+<div class="userPage">
+
+    <div>
+        User : <span class="nickName">{{nickname }}</span>
+    </div>
+    <div>
+        Score : <span class="score">{{ score }}</span>
+    </div>
+    <div>
+        Ranking : <span class="nickName">#{{nickname }}</span>
+    </div>
+    <div>
+        User : <span class="nickName">{{nickname }}</span>
+    </div>
+</div>
